<resources>
    <string name="app_name">Puzzle</string>
    <string name="start">Start</string>
    <string name="resume">Resume</string>
    <string name="exit">Exit</string>
    <string name="select">Select</string>
    <string name="off">Music Off</string>
    <string name="on">Music On</string>
    <string name="music">Music</string>
    <string name="picture">Picture</string>
    <string name="level">Level</string>
    <string name="play">Play</string>
</resources>
