<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/settingActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/setting_activity"
    tools:context="karlina.spbau.ru.project.SettingActivity">

    <LinearLayout
        android:layout_width="325dp"
        android:layout_height="247dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="134dp">


        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:text="@string/select"
            android:textColor="#ffffaaff"
            android:textSize="40dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/picture"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:background="#00ffffff"
                android:text="@string/picture"
                android:textColor="#ffffffff"
                android:textSize="30sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/smallImageView"
                android:layout_width="63dp"
                android:layout_height="63dp"
                app:srcCompat="@mipmap/ic_launcher_round" />

        </LinearLayout>

        <Button
            android:id="@+id/level"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:background="#00ffffff"
            android:text="@string/level"
            android:textColor="#ffffffff"
            android:textSize="30sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/music"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:background="#00ffffff"
            android:text="@string/music"
            android:textColor="#ffffffff"
            android:textSize="30sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/play_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:background="#00ffffff"
            android:text="@string/play"
            android:textColor="#ffff0aff"
            android:textSize="30sp"
            android:textStyle="bold" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>
