<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_activity"
    tools:context="karlina.spbau.ru.project.activities.MainActivity">


    <LinearLayout
        android:layout_width="164dp"
        android:layout_height="249dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/start_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#00ffffff"
            android:text="@string/start"
            android:textSize="40dp"
            android:textColor="#ffffffff"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/resume_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#00ffffff"
            android:text="@string/resume"
            android:textSize="40dp"
            android:textColor="#ffffffff"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/exit_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#00ffffff"
            android:text="@string/exit"
            android:textSize="40dp"
            android:textColor="#ffffffff"
            android:textStyle="bold" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
